[package]
name = "coyoneda"
version = "0.3.1"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Functor composition via the Co-Yoneda Lemma"
documentation = "http://srijs.github.io/rust-coyoneda/coyoneda"
repository = "https://github.com/srijs/rust-coyoneda"
license = "MIT"

[lib]
name = "coyoneda"
doctest = false
