[package]
name = "coyoneda"
version = "0.5.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Functor composition via the Co-Yoneda Lemma"
documentation = "http://srijs.github.io/rust-coyoneda/coyoneda"
repository = "https://github.com/srijs/rust-coyoneda"
license = "MIT"

[lib]
name = "coyoneda"
doctest = false

[dependencies]
functor = "0.1.1"
